# Proyecto-Ale

./: Cmakelist.txt  README.md  README.txt  firstp.cpp
Entregas-ALSE/: Ejercicio1.cpp  Ejercicio4-1  Ejercicio4-1-2.cpp  Ejercicio9-1.cpp  Parcial1-Punto4  Parcial1-Punto4.cpp  Parcial1.cpp  programa3  programa4  programa5
Entregas-ALSE/Ejercicios/: 1.TwoSum  1.TwoSum.cpp  1603.DesignParkingSystem  1603.DesignParkingSystem.cpp  2296.DesignaTextEditor  2296.DesignaTextEditor.cpp  355.DesignTwitter  355.DesignTwitter.cpp  36.ValidSudoku  36.ValidSudoku.cpp  415.Add Strings.cpp  415.AddStrings  705.DesignHashSet  705.DesignHashSet.cpp  Calcu_callbacks  Calcu_callbacks.cpp  Ejercicio415.cpp  TwoSum  TwoSum.cpp  point2d  point2d.cpp  point2d.h  programa1  programa2  tempCodeRunnerFile.cpp
Entregas-ALSE/Parciales/: Parcial1  Parcial1-Punto4.cpp
Entregas-ALSE/proyecto_op3_2025/: CMakeLists.txt  gestor-inventario_1.0.0.deb
Entregas-ALSE/proyecto_op3_2025/Gestor_de_Inventario/: CMakeLists.txt  Component.h  component.cpp  component.h  databasemanager.cpp  databasemanager.h  inventorymanager.cpp  inventorymanager.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  reportgenerator.cpp  reportgenerator.h
Entregas-ALSE/proyecto_op3_2025/Gestor_de_Inventario/db/: inventario.db
Entregas-ALSE/proyecto_op3_2025/build-Gestor_de_Inventario-Desktop-Debug/: CMakeCache.txt.prev  Gestor_de_Inventario  jajafunciona  paquevea
Entregas-ALSE/proyecto_op3_2025/build-Gestor_de_Inventario-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-3cb1016a8af3955baa9f.json  cache-v2-719c35113435c907a339.json  cmakeFiles-v1-77120cd9bea53ce84f72.json  cmakeFiles-v1-a6148f1efbe25de7fdc4.json  cmakeFiles-v1-ca8ed59bce1aa06d44ec.json  cmakeFiles-v1-eb20da867f77c84905c5.json  codemodel-v2-06152424890639f7f56d.json  codemodel-v2-5f09910f574231714710.json  codemodel-v2-7e29b7c2e72ae0a4c7d8.json  codemodel-v2-7e56884c958b38aeb2c3.json  directory-.-Debug-0976bab050e2fcda0716.json  directory-.-Debug-46cba4d92340728271e8.json  directory-.-Debug-9df5b15f9adc372353a6.json  index-2025-05-18T00-12-34-0658.json  index-2025-05-23T04-27-06-0259.json  index-2025-05-23T04-44-56-0120.json  index-2025-05-23T13-52-53-0917.json  index-2025-05-23T14-59-41-0899.json  target-Gestor_de_Inventario-Debug-3763ab3b093f3acb9076.json  (+6 more)
Entregas-ALSE/proyecto_op3_2025/build-Gestor_de_Inventario-Desktop-Debug/.cmake/api/v1/reply.prev/: cache-v2-e2a8c28fb975d4ad9caf.json  codemodel-v2-09230e77dcfb367aa78a.json  codemodel-v2-2e650f5aa16a593e8fa6.json  codemodel-v2-9a5acfa8cbf89ca8e89a.json  codemodel-v2-a1c1b0bcc5060c59cee9.json  directory-.-Debug-0a98fd514d49e8b30dfc.json  directory-.-Debug-370c3445072192f63246.json  directory-.-Debug-a7592fa0722a15a93e48.json  directory-.-Debug-ee76a31ccf7ee96dd983.json  index-2025-05-18T20-38-45-0562.json  index-2025-05-18T20-57-34-0186.json  index-2025-05-23T13-50-33-0419.json  target-Gestor_de_Inventario-Debug-67bfe3f67f79ad544a4a.json  target-Gestor_de_Inventario-Debug-b4bf1a31a7ab3ef3becc.json
Entregas-ALSE/proyecto_op3_2025/build-Gestor_de_Inventario-Desktop-Debug/AppDir/: Gestor_de_inventario.desktop
Entregas-ALSE/proyecto_op3_2025/build-Gestor_de_Inventario-Desktop-Debug/Gestor_de_Inventario_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
Entregas-ALSE/proyecto_op3_2025/build-Gestor_de_Inventario-Desktop-Debug/Gestor_de_Inventario_autogen/include/: ui_mainwindow.h
Entregas-ALSE/proyecto_op3_2025/build-Gestor_de_Inventario-Desktop-Debug/db/: inventario.db
Entregas-ALSE/proyecto_op3_2025/build-Gestor_de_Inventario-Desktop-Release/: Gestor_de_Inventario
Entregas-ALSE/proyecto_op3_2025/build-Gestor_de_Inventario-Desktop-Release/Gestor_de_Inventario_autogen/EWIEGA46WW/: moc_mainwindow.cpp.d
Entregas-ALSE/proyecto_op3_2025/build-Gestor_de_Inventario-Desktop-Release/Gestor_de_Inventario_autogen/include/: ui_mainwindow.h
Entregas-ALSE/proyecto_op3_2025/build-Gestor_de_Inventario-Desktop-Release/db/: inventario.db
Entregas-ALSE/proyecto_op3_2025/gestor-inventario_1.0.0/DEBIAN/: control
Entregas-ALSE/proyecto_op3_2025/gestor-inventario_1.0.0/usr/share/db/: inventario.db
Entregas-ALSE/proyecto_op3_2025/src/: CMakelists.txt  Component.h  component.cpp  main.cpp
Entregas-ALSE/proyecto_op3_2025/src/core/: Component.h  InventoryManager.h
Entregas-ALSE/proyecto_op3_2025/src/core/gui/: MainWindow.h
Entregas-ALSE/proyecto_op3_2025/src/persistence/: DatabaseManager.h
(+6 files in other folders)
